# cuda_operators

./: .gitignore  BUILD_GUIDE.md  CLOUD_PLATFORM_GUIDE.md  CMakeLists.txt  COLAB_AUTOMATION_SUMMARY.md  COLAB_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DIRECT_UPLOAD_METHODS.md  LayerNorm优化路线图.md  LayerNorm使用指南.md  OPTIMIZATION_GUIDE.md  QUICKSTART.md  QUICKSTART_COLAB.md  QUICK_REFERENCE.md  README.md  UPLOAD_TO_COLAB_GUIDE.md  build.bat  build_with_cmake.sh  cloud_quickstart.bat  cloud_quickstart.sh  pyproject.toml  requirements.txt  run_python_tests.bat  run_python_tests.sh  setup.py  云平台快速入门.md
benchmark/: benchmark.py  benchmark_layernorm.py
colab/templates/: utils.py
colab/tools/: profiler.py
scripts/: README.md  build.py  build_setup.py  colab_test_runner.py  prepare_for_colab.bat  prepare_for_colab.py  quickstart_colab.bat  sync_to_github.bat  sync_to_github.sh  upload_to_colab.py  upload_to_gdrive.py
src/: binding.cpp
src/common/: cuda_utils.h  timer.h
src/ops/: layernorm.cu  layernorm.h  layernorm_stage1.cu  layernorm_stage2.cu  layernorm_stage3.cu  matmul.cu  matmul.h  reduce.cu  reduce.h  rmsnorm.cu  rmsnorm.h  softmax.cu  softmax.h
tests/: test_layernorm.py  test_layernorm_stages.py  test_matmul.py  test_reduce.py  test_rmsnorm.py  test_softmax.py  utils.py
